--- a/src/RenderLab/RenderLab.vcxproj.filters
+++ b/src/RenderLab/RenderLab.vcxproj.filters
@@ -139,6 +139,12 @@
     <FxCompile Include="..\..\data\shaders\v_decal.hlsl">
       <Filter>shaders</Filter>
     </FxCompile>
+    <FxCompile Include="..\..\data\shaders\v_ocean.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="..\..\data\shaders\p_ocean.hlsl">
+      <Filter>shaders</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Precompiled.cpp" />
@@ -249,6 +255,9 @@
     <ClCompile Include="Raycast.cpp" />
     <ClCompile Include="components\Decal.cpp">
       <Filter>components</Filter>
+    </ClCompile>
+    <ClCompile Include="render\Ocean.cpp">
+      <Filter>render</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -434,6 +443,9 @@
     </ClInclude>
     <ClInclude Include="components\Decal.h">
       <Filter>components</Filter>
+    </ClInclude>
+    <ClInclude Include="render\Ocean.h">
+      <Filter>render</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
